# agent-collective-architecture

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  pyproject.toml
agent_collective/: __init__.py  audit.py  cli.py  identity.py  messaging.py  validator.py
examples/: spawn-spec.yaml
reviews/: README.md  architecture-compliance-checklist.md  registry.yaml
reviews/phase-1a/: findings-001-security-quality.md  findings-002-meta-review.md  findings-003-design-review.md  findings-004-test-plan-review.md
schemas/: spawn-schema.json
tests/: test_audit.py  test_identity.py  test_messaging.py  test_validator.py
tests/test-plans/: master-test-plan.md
